--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.5.2"
+agp = "8.6.1"
 compiler = "4.12.0"
 exifinterface = "1.3.7"
 firebaseBom = "32.8.1"
@@ -24,6 +24,7 @@ googleGmsGoogleServices = "4.4.1"
 firebaseAuth = "23.0.0"
 firebaseFirestoreKtxVersion = "25.0.0"
 firebaseStorage = "21.0.0"
+playServicesAuth = "21.2.0"
 recyclerview = "1.3.2"
 
 [libraries]
@@ -51,6 +52,7 @@ firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version
 google-firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtxVersion" }
 firebase-storage = { group = "com.google.firebase", name = "firebase-storage", version.ref = "firebaseStorage" }
 androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
+play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
